--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+    <ion-tab-button tab="tab1" href="/tabs/tab1" (click)="clickMesa()">
+      <img [class]="test1" height="30px" width="30px" src="assets/billiard.png">
+      <ion-label>Mesas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+    <ion-tab-button tab="tab2" href="/tabs/tab2" (click)="clickCliente()">
+      <img [class]="test2" height="30px" width="30px" src="assets/billiard_cliente.png">
+      <ion-label>Clientes</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+    <ion-tab-button tab="tab3" href="/tabs/tab3" (click)="clickHistorial()">
+      <img [class]="test3" height="30px" width="30px" src="assets/history.png">
+      <ion-label>Historial</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
