Pagina con cards de mesas (componente) y click a detalles (tab.routes + funciones)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,6 +12,14 @@
       <ion-title size="large">Mesas</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  
+  <ion-content>
+    <ng-container *ngFor="let item of items">
+      <app-card-mesa
+        [imagen]="item.imagen"
+        [inicio]="item.inicio"
+        [precio]="item.precio"
+        (click)="goToDetails(item)">
+      </app-card-mesa>
+    </ng-container>
+  </ion-content>
 </ion-content>
