--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,7 +12,9 @@
       <ion-title size="large">Mesas</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content>
+  <ion-content class="ion-padding">
+      <ion-button expand="block" (click)="openModalCrearMesa()">Crear Mesa!</ion-button>
+      <p>{{ message }}</p>
     <ng-container *ngFor="let item of items">
       <app-card-mesa
         [imagen]="item.imagen"
