--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,6 +14,7 @@
   </ion-header>
   <ion-content class="ion-padding">
       <ion-button expand="block" (click)="openModalCrearMesa()">Crear Mesa!</ion-button>
+      <ion-modal></ion-modal>
       <p>{{ message }}</p>
     <ng-container *ngFor="let item of items">
       <app-card-mesa
