cargan selects pero no cargan cards... yo propongo hacer una nueva app y reutilizar los diseños de los tabs solamente

--- a/src/app/modal-crear-mesa/modal-crear-mesa.component.html
+++ b/src/app/modal-crear-mesa/modal-crear-mesa.component.html
@@ -20,7 +20,7 @@
       [(ngModel)]="numero" 
       (change)="onNumeroChange(getSelectValue($event))">
       <option [value]="null" disabled selected>Seleccione un número</option>
-      <option *ngFor="let num of nrosdisponibles" [value]="num">
+      <option *ngFor="let num of nrosdisponibles()" [value]="num">
         {{ num }}
       </option>
     </select>
