historial y eliminar funcionando, modificar bug, total pendiente (algunos bugs media noche)agregarlo en detalles [ajustar esteticamente el alert si es posible]

--- a/src/app/detalles-mesa/detalles-mesa.component.html
+++ b/src/app/detalles-mesa/detalles-mesa.component.html
@@ -56,6 +56,18 @@
           name="extras" />
       </div>
 
+      <!-- Total -->
+      <div class="mb-3">
+        <label for="total" class="form-label">Total</label>
+        <input 
+          type="text" 
+          class="form-control" 
+          id="total" 
+          [(ngModel)]="total" 
+          name="total"
+          readonly />
+      </div>      
+
       <!-- Botones -->
       <div class="d-grid gap-2">
         <button 
