--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,10 +9,10 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Historial de Mesas</ion-title>
+      <ion-title size="large">Historial</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div class="d-flex justify-content-center align-items-center">
+  <div class="d-flex justify-content-center align-items-center mt-3">
     <div class="d-flex justify-content-between w-75">
       <div class="box text-center p-3">
         <p>Cantidad Cobros: {{can_cobros}}</p>
@@ -21,6 +21,12 @@
         <p>Total Cobros: {{tot_cobros}}</p>
       </div>
     </div>
+  </div>
+  <div class="d-grid gap-2 m-3">
+    <button 
+      type="button" 
+      class="btn btn-danger p-2" 
+      >Eliminar Historial</button>
   </div>
 
   <table class="table table-dark">
