--- a/src/app/modal-crear-mesa/modal-crear-mesa.component.html
+++ b/src/app/modal-crear-mesa/modal-crear-mesa.component.html
@@ -13,7 +13,7 @@
 <ion-content class="ion-padding">
 
   <div>
-    <label for="numeroSelect">Número de Mesa:</label>
+    <label class="form-label" for="numeroSelect">Número de Mesa:</label>
     <select 
       id="numeroSelect" 
       class="form-select" 
@@ -26,17 +26,14 @@
     </select>
   </div>
 
-  <ion-item>
-    <ion-label position="floating">Hora</ion-label>
-    <ion-input 
-      required="true" 
-      type="time" 
-      [(ngModel)]="selectedTime">
-    </ion-input>
-  </ion-item>
+  <div class="mt-3">
+    <label class="form-label" for="hora">Hora de inicio</label>
+    <input class="form-control" type="time" required="true" 
+    [(ngModel)]="selectedTime">
+  </div>
 
-  <div>
-    <label for="precioSelect">Precio:</label>
+  <div class="mt-3">
+    <label class="form-label" for="precioSelect">Precio:</label>
     <select 
       id="precioSelect" 
       class="form-select" 
