tema oscuro siempre

--- a/src/app/modal-crear-mesa/modal-crear-mesa.component.html
+++ b/src/app/modal-crear-mesa/modal-crear-mesa.component.html
@@ -14,7 +14,7 @@
 
   <div>
     <label class="form-label" for="numeroSelect">Número de Mesa:</label>
-    <select 
+    <select  class="form-select"
       id="numeroSelect" 
       class="form-select" 
       [(ngModel)]="numero" 
@@ -34,7 +34,7 @@
 
   <div class="mt-3">
     <label class="form-label" for="precioSelect">Precio:</label>
-    <select 
+    <select class="form-select"
       id="precioSelect" 
       class="form-select" 
       [(ngModel)]="precio" 
