--- a/src/app/detalles-mesa/detalles-mesa.component.html
+++ b/src/app/detalles-mesa/detalles-mesa.component.html
@@ -6,14 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="container mt-4 bg-dark text-white">
+<ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Mesas</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div class="card p-3 shadow">
+  <div class=" p-3 ">
     <div class="text-center mb-3">
       <img 
         [src]="'assets/poolball' + item.numero.toString() + '.png'" 
