--- a/src/app/card-cliente/card-cliente.singleton.scss
+++ b/src/app/card-cliente/card-cliente.singleton.scss
@@ -1,8 +1,11 @@
 .custom-card {
-    margin: 8px !important;
+  margin-top: 4px !important;  
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  
   }
   .custom-card-content {
-    padding: 4px!important;
+    padding: 2px!important;
   }
   .row-align-center {
     align-items: center !important; 
