--- a/src/app/card-cliente/card-cliente.singleton.html
+++ b/src/app/card-cliente/card-cliente.singleton.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row class="row-align-center">
         <ion-col size="3" class="column-center">
-          <img src="'assets/cliente.png'" alt="N°" class="responsive-image">
+          <img src="assets/cliente.png" alt="N°" class="responsive-image">
         </ion-col>
 
         <ion-col size="9" class="column-center">
