--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -18,17 +18,12 @@
     </div>
     <ion-searchbar [debounce]="200" (ionInput)="handleInput($event)" show-clear-button="always" placeholder="Buscar nombre"></ion-searchbar>
       <ion-modal></ion-modal>
-      <ion-list>
-        <ion-item *ngFor="let result of results">
-          <ion-label>{{ result }}</ion-label>
-        </ion-item>
-      </ion-list>
-      <!-- <ng-container  *ngFor="let cli of clientes()">
+      <ng-container  *ngFor="let result of results">
         <app-card-cliente
-          [nombre]="cli.nombre"
-          (click)="goToDetails(cli)">
+          [nombre]="result.nombre"
+          (click)="goToDetails(result)">
         </app-card-cliente>
-      </ng-container> -->
+      </ng-container>
   </ion-content>
 
 </ion-content>
