--- a/src/app/modal-crear-cliente/modal-crear-cliente.component.html
+++ b/src/app/modal-crear-cliente/modal-crear-cliente.component.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="cancel()">Cancelar</ion-button>
     </ion-buttons>
-    <ion-title>Crear Mesa</ion-title>
+    <ion-title>Crear Cliente</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true">Confirmar</ion-button>
     </ion-buttons>
